--- a/Destapa-Cañerias/Destapaciones-Con-Maquina.html
+++ b/Destapa-Cañerias/Destapaciones-Con-Maquina.html
@@ -37,9 +37,7 @@ body {
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container">
-       <a class="navbar-brand" href="https://craigserivces.github.io/cloacas12/"><!--Site Name-->
-Destapaciones De Cloacas
-<!--endSite Name--></a>
+       <a class="navbar-brand" href="https://craigserivces.github.io/cloacas12/"><!--Site Name-->Destapaciones De Cloacas<!--endSite Name--></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -144,27 +142,27 @@ Destapaciones Con Maquina
 		  <!--TotalPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Destapa-cloacas-caballito.html">Destapa cloacas caballito </a> 
+       <a href="../Destapa-Cañerias/Destapaciones-Emergencias.html">Destapaciones Emergencias </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Como-hacer-destapa-cañerias-liquido.html">Como hacer destapa cañerias liquido </a> 
+       <a href="../Destapa-Cañerias/Destapacaños-mas-potente.html">Destapacaños mas potente </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Destapa-cañerias-zona-sur-lanus.html">Destapa cañerias zona sur lanus </a> 
+       <a href="../Servicios/Destapador-de-baño-liquido-walmart.html">Destapador de baño liquido walmart </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Plomero-Destapa-Cañerias.html">Plomero Destapa Cañerias </a> 
+       <a href="../Servicios/Destapacaños-manual-precio.html">Destapacaños manual precio </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Alcohol-boricado-como-se-usa.html">Alcohol boricado como se usa </a> 
+       <a href="../Destapa-Cañerias/Destapaciones-De-Baños.html">Destapaciones De Baños </a> 
          </li>
 <!--EndPostsList-->
 
@@ -202,6 +200,10 @@ Destapaciones Con Maquina
                 
                   <ul class="list-unstyled mb-0" class="leftCat">
 <li>
+  <a href="../Servicios/index.html">Servicios</a>
+</li>
+
+<li>
   <a href="../Destapa-Cañerias/index.html">Destapa Cañerias</a>
 </li>
 
@@ -223,22 +225,7 @@ Destapaciones Con Maquina
                   <!--TotalRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Renta-de-destapacaños-home-depot.html">Renta de destapacaños home depot </a> 
-         </li>			  </div>
-<!--EndRandPosts-->
-<!--RandPosts-->
-             <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapador-De-Baño.html">Destapador De Baño </a> 
-         </li>			  </div>
-<!--EndRandPosts-->
-<!--RandPosts-->
-             <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapaciones-de-cloacas-zona-sur.html">Destapaciones de cloacas zona sur </a> 
-         </li>			  </div>
-<!--EndRandPosts-->
-<!--RandPosts-->
-             <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Servicio-Destapa-Cañerias.html">Servicio Destapa Cañerias </a> 
+       <a href="../Destapa-Cañerias/Destapar-Cañeria-Cocina.html">Destapar Cañeria Cocina </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
@@ -248,7 +235,37 @@ Destapaciones Con Maquina
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Plomero-para-destapar-cañerias.html">Plomero para destapar cañerias </a> 
+       <a href="../Destapa-Cañerias/Como-destapar-un-inodoro-tapado-con-jabon.html">Como destapar un inodoro tapado con jabon </a> 
+         </li>			  </div>
+<!--EndRandPosts-->
+<!--RandPosts-->
+             <div id="recent-post">         <li>
+       <a href="../Destapa-Cañerias/Destapacaños-pretul-precio.html">Destapacaños pretul precio </a> 
+         </li>			  </div>
+<!--EndRandPosts-->
+<!--RandPosts-->
+             <div id="recent-post">         <li>
+       <a href="../Servicios/Destapar-desague-de-cocina.html">Destapar desague de cocina </a> 
+         </li>			  </div>
+<!--EndRandPosts-->
+<!--RandPosts-->
+             <div id="recent-post">         <li>
+       <a href="../Destapa-Cañerias/Destapacaños-pretul-como-se-usa.html">Destapacaños pretul como se usa </a> 
+         </li>			  </div>
+<!--EndRandPosts-->
+<!--RandPosts-->
+             <div id="recent-post">         <li>
+       <a href="../Destapa-Cañerias/Liquido-para-destapar-tuberias-de-agua-potable.html">Liquido para destapar tuberias de agua potable </a> 
+         </li>			  </div>
+<!--EndRandPosts-->
+<!--RandPosts-->
+             <div id="recent-post">         <li>
+       <a href="../Destapa-Cañerias/Destapaciones-De-Cañeria.html">Destapaciones De Cañeria </a> 
+         </li>			  </div>
+<!--EndRandPosts-->
+<!--RandPosts-->
+             <div id="recent-post">         <li>
+       <a href="../Servicios/Destapaciones-de-cañerias-ituzaingo.html">Destapaciones de cañerias ituzaingo </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
@@ -259,21 +276,6 @@ Destapaciones Con Maquina
 <!--RandPosts-->
              <div id="recent-post">         <li>
        <a href="../Destapa-Cañerias/Bomba-destapacaños-home-depot.html">Bomba destapacaños home depot </a> 
-         </li>			  </div>
-<!--EndRandPosts-->
-<!--RandPosts-->
-             <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapar-Cañeria-De-La-Cocina.html">Destapar Cañeria De La Cocina </a> 
-         </li>			  </div>
-<!--EndRandPosts-->
-<!--RandPosts-->
-             <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Merclin-destapa-cañerias-concentrado.html">Merclin destapa cañerias concentrado </a> 
-         </li>			  </div>
-<!--EndRandPosts-->
-<!--RandPosts-->
-             <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Como-destapar-cañerias-de-aguas-negras.html">Como destapar cañerias de aguas negras </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 
@@ -300,9 +302,7 @@ Destapaciones Con Maquina
     <!-- Footer -->
     <footer class="py-5 bg-dark">
       <div class="container">
-        <p class="m-0 text-center text-white"><!--Footer-->
-Destapaciones De Cloacas
-<!--endFooter--></p>
+        <p class="m-0 text-center text-white"><!--Footer-->Destapaciones De Cloacas<!--endFooter--></p>
       </div>
       <!-- /.container -->
     </footer>
